<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="bottom|center"
    android:orientation="vertical" 
    >

    <ImageView
        android:id="@+id/imageMenu"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_weight="1"
        android:contentDescription="@string/civilservice_content"
        android:src="@drawable/cse_logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/abc_dropdownitem_text_padding_left"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/menu_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_study"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/buttons_study" />

    <Button
        android:id="@+id/btn_quiz"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/buttons_quiz" />

    <Button
        android:id="@+id/btn_score"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/buttons_score" >

    </Button>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6338321126542219/6281126895" >
    </com.google.android.gms.ads.AdView>

</LinearLayout>